tests/baselines/reference/newAbstractInstance.errors.txt
newAbstractInstance.ts(3,5): error TS2351: This expression is not constructable.
  Type 'B' has no construct signatures.


==== newAbstractInstance.ts (1 errors) ====
    abstract class B { }
    declare const b: B;
    new b();
        ~
!!! error TS2351: This expression is not constructable.
!!! error TS2351:   Type 'B' has no construct signatures.
    